--- a/404.html
+++ b/404.html
@@ -24,17 +24,13 @@
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 </head><!--/head-->
 
-<body>
+<body class="set-back">
+    <h2 class="content-404">OOPS!</h2>
 	<div class="container text-center">
-		<div class="logo-404">
-			<a href="index.html"><img src="images/home/logo.png" alt="" /></a>
+		<div class="go-home-404">
+			<a href="index.html"> Go Back To Home</a>
 		</div>
-		<div class="content-404">
-			<img src="images/404/404.png" class="img-responsive" alt="" />
-			<h1><b>OOPS!</b> We Couldn’t Find this Page</h1>
-			<p>Uh... So it looks like you brock something. </p>
-			<h2><a href="index.html">Bring me back Home</a></h2>
-		</div>
+		
 	</div>
 
   
