Blog Page Added

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 								<li class="dropdown"><a href="#"><i class="fa fa-user-circle" aria-hidden="true">  Blog</i><i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
                                         <li><a href="blog.html">Blog List</a></li>
-										<li><a href="blog-single.html">Blog Single</a></li>
+										<li><a href="blog.html">Blog Single</a></li>
                                     </ul>
                                 </li> 
 								<li><a href="404.html"><i class="fa fa-exclamation-triangle" aria-hidden="true">  404</i>	</a></li>
