--- a/contact-us.html
+++ b/contact-us.html
@@ -120,9 +120,8 @@
                          
                                         <li><a href="shop.html">Products</a></li>
 										<li><a href="product-details.html">Product Details</a></li> 
-										<li><a href="checkout.html">Checkout</a></li> 
-										<li><a href="cart.html">Cart</a></li> 
-										<li><a href="login.html">Login</a></li> 
+										
+										<li><a href="logout.html">Log-Out</a></li> 
                                     </ul>
                                 </li> 
 								<li class="dropdown"><a href="#"><i class="fa fa-user-circle" aria-hidden="true">  Blog</i><i class="fa fa-angle-down"></i></a>
@@ -218,7 +217,7 @@
     	</div>	
     </div><!--/#contact-page-->
 	
-	<footer id="footer"><!--Footer-->
+		<footer id="footer"><!--Footer-->
 		<div class="footer-top">
 			<div class="container">
 				<div class="row">
