--- a/product-details.html
+++ b/product-details.html
@@ -117,9 +117,8 @@
                                     <ul role="menu" class="sub-menu">
                                         <li><a href="shop.html">Products</a></li>
 										<li><a href="product-details.html" class="active">Product Details</a></li> 
-										<li><a href="checkout.html">Checkout</a></li> 
-										<li><a href="cart.html">Cart</a></li> 
-										<li><a href="login.html">Login</a></li> 
+										
+										<li><a href="logout.html">Log-Out</a></li> 
                                     </ul>
                                 </li> 
 								<li class="dropdown"><a href="#"><i class="fa fa-user-circle" aria-hidden="true">  Blog</i><i class="fa fa-angle-down"></i></a>
